# za-corruption

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  METHOD.md  Makefile  NEXT.md  NOTICE  README.md  directory-structure.md  docker-compose.yml  practical-build-plan-madlanga.md  practical-build-plan-zondo.md  pyproject.toml  taxonomy-ontologies.md
.cursor/rules/: 30-medvoice-project-rules.mdc  README.md  agent-operating-rules.mdc  commit-discipline.mdc  karpathy-behavioral-guidelines.mdc  voice.mdc
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/routes/: __init__.py  claims.py  graph.py  health.py  search.py
apps/api/app/schemas/: __init__.py  claims.py  graph.py  health.py  search.py
apps/api/app/services/: __init__.py  neo4j_service.py  qdrant_service.py
apps/api/tests/: conftest.py  test_claims.py  test_graph_route.py  test_health.py  test_invariants.py  test_search.py
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: build-plan-madlanga.md  build-plan-shared-core.md  build-plan-zondo.md  getting-started.md  linkedin-post-1-kit.md  madlanga_full_day_video_transcription_technology.md  milestone-plan.md  neo4j-model.md  ontology.md  parse-notes.md  preflight-canary-v2.md  project-state.md  qdrant-model.md  queries.md  track-reconciliation.md  vision.md
linkedin/: madlanga-cosmograph-post.md  matlala_live_cosmograph.html  news-matlala-plea-post.md  news-matlala-questions-post.md  series-a-post-2-FINAL.md  series-a-post-2-hinge-at-scale.md  series-a-post-2-the-network.md  x-matlala-plea.md  x-matlala-questions.md  x-thread-post-2.md  x-thread-post-3-surge-days.md
plans/: README.md  data-movie.md  evidentiary-completeness-track.md  extract-v2-clean-predicates.md  live-cosmograph-from-neo4j.md  m5-public-surface.md  post-extraction-roadmap.md  prompt_repo_ground_truth_audit.md  staying-current-pipeline.md
scripts/: association_analysis.py  build_cosmograph_data.py  build_cosmograph_html.py  graph_galaxy.py  interrogation_gaps.py  land_m4_commits.sh  postrun_sweep.py  reach_timeline.py  recover_batch.py  retrieve_sources.py  suggest_aliases.py  surge_analysis.py  sync_to_vault.py
(+23 files in other folders)
