[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "commission-api"
version = "0.1.0"
description = "Read-only FastAPI surface over the commission stores (M5)"
requires-python = ">=3.12"
dependencies = [
    "commission-ingestion",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
