[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "commission-api"
version = "0.1.0"
description = "Read-only FastAPI surface over the commission stores (M5)"
requires-python = ">=3.12"
# commission-ingestion[vector] pulls sentence-transformers + torch: the /search
# endpoint embeds the query at request time, so the embedder is a hard runtime
# dependency of this API, not an optional extra. Without it /search returns 500.
dependencies = [
    "commission-ingestion[vector]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
